Fix styling issue on mobile.

--- a/stylesheets/main.scss
+++ b/stylesheets/main.scss
@@ -164,7 +164,7 @@ body {
         }
 
         li {
-          height: auto;
+          height: auto !important;
         }
       }
     }
